2020-04-20  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp.c (mpz_fits_slong_p): Simplify, by using mpz_cmp_si.
	(mpz_fits_sint_p, mpz_fits_uint_p, mpz_fits_sshort_p)
	(mpz_fits_ushort_p): New functions.
	* mini-gmp.h: Declare new functions.
	* tests/t-signed.c (try_fits_utype_p, try_fits_sint_p)
	(try_fits_sshort_p): New tests.

2020-02-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (gmp_jacobi_coprime): Exit condition on a.

2019-12-04 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (mpn_invert_3by2): Remove shortcuts.

2019-11-19 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (mpn_invert_3by2): Shortcut for short limbs.

2019-11-09 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c (gmp_clz, gmp_popcount_limb, mpz_export):
	Avoid undefined behaviour with small limb sizes.

2019-09-30  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-gcd.c (gcdext_valid_p): Stricter checks for gcdext
	corner cases.

2018-12-21 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Support for micro-gmp.

2018-11-07 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Silence a couple of warnings.

2018-10-30 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_probab_prime_p): BPSW test for primality.

	* tests/hex-random.c (hex_random_lucm_op): New function.
	* tests/hex-random.h: Declare it.
	* tests/mini-random.c (mini_random_lucm_op): New function.
	* tests/mini-random.h: Declare it.
	* mini-gmp/tests/t-lucm.c: New test
	* mini-gmp/tests/Makefile (CHECK_PROGRAMS): Add t-lucm.

2018-09-07  Niels Möller  <nisse@lysator.liu.se>

	* tests/t-div.c (testmain): Add missing const declarations.

2018-05-20 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_get_d): Convert a fixed number of
	bits (GMP_DBL_MANT_BITS) to avoid rounding.

	* mini-mpq.c (mpq_mul): Use mpq_nan_init.

	* tests/t-double.c (test_matissa): Tests converted bits.
